--- a/index.html
+++ b/index.html
@@ -1,12 +1,84 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My project</title>
-</head>
-<body>
-  <h1>My project 456</h1>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" 
+      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" 
+      crossorigin="anonymous" 
+      referrerpolicy="no-referrer"
+    >
+  </head>
+  <body>
+
+    <header class="header">
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#home" class="nav__link">
+              Home
+            </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#mac" class="nav__link">
+              Mac
+            </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#ipad" class="nav__link">
+              ipad
+            </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#iphone" class="nav__link">
+              iphone
+            </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#watch" class="nav__link">
+              watch
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <main class="main">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+        <p>7</p>
+        <p>8</p>
+        <p>9</p>
+        <p>10</p>
+        <p>11</p>
+        <p>12</p>
+        <p>13</p>
+        <p>14</p>
+        <p>15</p>
+        <p>16</p>
+        <p>17</p>
+        <p>18</p>
+        <p>19</p>
+        <p>20</p>
+
+        asdf
+      </main>
+    </main>
+
+    <footer class="footer">
+      
+    </footer>
+  </body>
 </html>
